--- a/dom-para-iniciantes/o-que-e-o-dom/index.html
+++ b/dom-para-iniciantes/o-que-e-o-dom/index.html
@@ -6,7 +6,9 @@
     <title>O que é o dom</title>
 </head>
 <body>
-    <h1>Esse é o Título</h1>
+    <div class="ativo">a</div>
+    <div class="ativo">b</div>
+    <h1 class="titulo-principal azul">Esse é o Título</h1>
     <script src="script.js"></script>
 </body>
 </html>
